# full_stack_ai_pipelines

./: .gitignore  push-to-remote.sh
iminn-tools/: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  llama_imi_1t  llama_imi_4t  pyproject.toml  requirements.txt  riscv-imi.cmake  run_glm_psim.sh  toolchain.cmake
iminn-tools/docs/: README-rootfs  architecture_diagram.md  architecture_overview.md  framework_investigation.md  future_frameworks_suggestions.md  glm_4_6v_flash_usage.md  glm_psim_riscv_guide.md  glm_qemu_system_mode_1cpu.md  glm_x86_psim_guidance.md  higher_level_frameworks_guide.md  imi_cpu_architecture.md  iminn_tools_system_mode_integration.md  kernel_compatibility_check.md  linjia_code_understand_12_09_2025.md  linjia_llama_cpp_readme.md  llama_cpp_execution_flow.md  llama_cpp_internal_architecture.md  llama_cpp_model_to_cpu_inference.md  llamacpp_lifecycle.md  llamacpp_multithreading_changes.md  llamacpp_scheduler_architecture.md  llamacpp_threading_deep_dive.md  monthly_report_december_2025.md  monthly_report_january_2026.md  option_a_quickstart.md  psim_architecture_support.md  psim_multi_arch_requirements.md  psim_qemu_sigsegv_fix.md  qemu_all_in_one_guide.md  ray_llm_comprehensive_analysis.md  ray_serve_implementation_strategy.md  threading_configuration_analysis.md  verify_multithreading.md  vllm_cpu_exploration.md  vllm_native_testing_guide.md
iminn-tools/docs/IM_strategies/: README.md  URGENT_vp_meeting_slides.md  ceo_strategy_document.md  company_architecture_slide.md  company_overall_architecture.md  customer_questions_deep_dive.md  generate_stack_diagram.py  scope_boundaries_quick_ref.md  software_stack_scope_corrected.md  vp_1on1_scope_analysis.md  vp_1on1_slide_outline.md  vp_email_action_plan.md  vp_sergey_requirements.md
iminn-tools/docs/qwen_model_on_qemu/: README.md
iminn-tools/scripts/: benchmark_vllm_vs_llamacpp.py  compare_qemu_performance.sh  deploy_ray_serve.py  gtest_fix.patch  instr_hex.py  npu-build.sh  ort_rvv_build_fixes.patch  ort_rvv_build_fixes_v2.patch  pilos_opgen.sh  pilos_update.sh  qemu-build.sh  run_glm_system_9p_1cpu.sh  run_glm_system_9p_1cpu_simpoint.sh  run_llamacpp_api.sh  spike_build.sh  tflite_benchmark_roi.patch  type_header_fix0.patch
iminn-tools/src/iminnt/: cli.py  constants.py  core.py  infra.py  iree.py  litert.py  llamacpp.py  llamacpp_api.py  llamacpp_langchain.py  llamacpp_llamaindex.py  llamacpp_ray_serve.py  llamacpp_service.py  log_cfg.py  npu.py  onnx_rt.py  playground.py  registry.py  rvv_tests.py  ssh.py  timvx.py  tqdm.py  trace_gen.py  utils.py  xnnpack.py
iminn-tools/src/iminnt/resources/prompts/: code-hello-world.txt  hello-world.txt  poem-prompt.txt  write-virus.txt
iminn-tools/src/iminnt/resources/simcfg/: debug.cfg
iminn-tools/src/iminnt/resources/xnnpack/: benchmarks.txt  ukernels_cascadelake.txt  ukernels_emeraldrapids.txt  ukernels_imi.txt  ukernels_neoverse_n2.txt  ukernels_rvv.txt  ukernels_rvv_orig.txt
sglang_exploration/: .gitignore  README.md  activate_sglang_env.sh  setup_sglang_env.sh  verify_all.sh
sglang_exploration/docs/: QUICKSTART.md  README.md  REPORT_CPU_VS_GPU_QWEN3_1_7B.md  REPORT_SGLANG_VS_VLLM_QWEN3_1_7B.md
sglang_exploration/packaging/stub_torch_memory_saver/: README.md  pyproject.toml
sglang_exploration/packaging/stub_torch_memory_saver/src/torch_memory_saver/: __init__.py
sglang_exploration/sglang_cpu_test/: README.md
sglang_exploration/sglang_gpu_test/: README.md
sglang_exploration/sglang_test/: README.md  generate_query_set.py  pth_rope_bootstrap.py  requirements.txt  rope_torch_fallback.py  run_experiment_both.sh  run_experiment_gpu_batch.sh  run_offline_batch_experiment.py  run_smoke_cpu.sh  (+2 more)
speech_ai_exp/: README.md
speech_ai_exp/project/: pyproject.toml
speech_ai_exp/project/configs/: demo_staged_kokoro.yaml  demo_staged_kokoro_agent.yaml  demo_staged_kokoro_agent_dual.yaml  demo_staged_kokoro_agent_remote.yaml  demo_staged_ollama_kokoro.yaml  example_hf.yaml  example_kokoro.yaml  example_ollama.yaml
speech_ai_exp/project/demo/demo_inputs_gallery/: index.html
speech_ai_exp/project/demo/latest/: index.html
speech_ai_exp/project/experiments/: run_turn.py  summarize_profiles.py
speech_ai_exp/project/profiles/: demo.json  kokoro_demo.json  run1.json  verify_run.json
speech_ai_exp/project/profiles/demo_inputs/: 01_math_us_m.json  02_math_gb_f.json  03_weather_us_f.json  04_greeting_us_fast.json  05_time_us_slow.json  06_capital_scot_m.json  07_recipe_us_m.json  08_name_us_m.json  _batch_summary.json
speech_ai_exp/project/src/staged_voice/: __init__.py  cli.py  config.py  llm_call_log.py  pipeline.py  profiling.py  prompt_stats.py
speech_ai_exp/project/src/staged_voice/backends/: __init__.py  asr_faster_whisper.py  base_types.py  llm_factory.py  llm_hf_causal.py  llm_ollama.py  llm_remote_chat.py  tts_espeak.py  tts_factory.py  tts_kokoro.py
speech_ai_exp/project2/: .gitignore  README.md  pyproject.toml
speech_ai_exp/project2/configs/: example_mini_omni.yaml  example_moshi.yaml
speech_ai_exp/project2/experiments/: demo_review.py
speech_ai_exp/project2/src/omni_voice/: __init__.py  cli.py  config.py  pipeline.py  profiling.py  sidecar_whisper.py  tts_espeak.py
speech_ai_exp/project2/src/omni_voice/backends/: __init__.py  backend_factory.py  base_types.py  mini_omni_backend.py  moshi_backend.py
speech_ai_exp/server/: .gitignore  README.md  docker-compose.yml  pyproject.toml
speech_ai_exp/server/app/: audio_util.py  config.py  env_file.py  llm_registry.py  main.py  pipeline_service.py  session_store.py
speech_ai_exp/server/app/agent/: __init__.py  rag.py  service.py  tools.py  web_search.py
speech_ai_exp/server/app/db/: __init__.py  config.py  hybrid_rag.py  models.py  normalize.py  repositories.py  seed.py  seed_data.py  session.py  vector_store.py
speech_ai_exp/server/scripts/: build_knowledge_index.py  chat_completions_stream.py  init_databases.py
speech_ai_exp/server/static/: app.js  index.html  styles.css
vllm_exploration/: .gitignore  setup_jetson_gpu_user_after_sudo.sh
(+68 files in other folders)
