[project]
name = "iminnt"
version = "0.1.0"
description = "AI/ML evaluation and tooling for I-Machines"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sean Kinzer", email = "skinzer@imachinesinc.com" }
]
maintainers = [
  { name = "Sean Kinzer", email = "skinzer@imachinesinc.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "packaging",
  "numpy>=1.19.5, <=2.1.2",
  "paramiko",
  "jinja2",
  "pandas",
  "pyelftools",
  "flatbuffers==2.0",
  "nanobind>=2.9, <3.0",
  "pybind11>=2.10.0, <=2.13.6",
  "PyYAML>=5.4.0, <=6.0.1",
  "ml_dtypes>=0.5.0, <=0.6.0",
  "typing_extensions>=4.12.2"
]

[project.optional-dependencies]
dev = [
    "pip<25.0",
    "toml<0.11",
    "pytest-cov",
    "coverage<8.0.0",
    "pytest<8.4",
    "pre-commit==4.0.1",
    "ruff==0.8.2",
    "black == 24.10.0",
    "pyelftools",
    "pybind11",
    "nanobind"
]

[project.urls]
"Homepage" = "https://github.com/I-Machines/iminn-tools"
"Bug Reports" = "https://github.com/I-Machines/iminn-tools/issues"
"Source" = "https://github.com/I-Machines/iminn-tools"

[project.scripts]
iminnt = "iminnt.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["iminnt"]

[tool.black]
# Emit syntax compatible with older versions of python instead of only the range
# specified by `requires-python`. TODO: Remove this once we support these older
# versions of python and can expand the `requires-python` range.
target-version = ["py310", "py311", "py312"]
exclude = '''
    /(
     \.bzr
    | \.direnv
    | \.eggs
    | \.git
    | \.git-rewrite
    | \.hg
    | \.ipynb_checkpoints
    | \.mypy_cache
    | \.nox
    | \.pants.d
    | \.pyenv
    | \.pytest_cache
    | \.pytype
    | \.ruff_cache
    | \.svn
    | \.tox
    | \.venv
    | \.vscode
    | \__pypackages__
    | \_build
    | \buck-out
    | \build
    | \dist
    | \node_modules
    | \site-packages
    | \venv
)/
'''
# Same as Black.
line-length = 120

[tool.ruff]
# Exclude a variety of commonly ignored directories.
include = ["src/**/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 120
indent-width = 4
# Assume Python 3.10
target-version = "py310"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"