[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staged-voice"
version = "0.1.0"
description = "Local ASR → LLM → TTS pipeline with per-stage profiling (Project 1 baseline)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "speech_ai_exp" }]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
asr-whisper = ["faster-whisper>=1.0.0"]
llm-hf = ["torch>=2.1", "transformers>=4.41", "accelerate>=0.30"]
experiment = ["pyyaml>=6.0"]
tts-kokoro = ["kokoro>=0.9.4"]

dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
staged-voice-run = "staged_voice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
