[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-chat-server"
version = "0.1.0"
description = "FastAPI voice chatbot backed by staged-voice (Project 1)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
