[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_memory_saver"
version = "0.0.9"
description = "Local noop stub: Jetson image lacks system CUDA toolkit headers required to build the real torch_memory_saver from source."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
